# hdc302x-rs-async

./: Cargo.toml  README.md
examples/esp32_embassy/: Cargo.toml
examples/esp32_embassy/src/: main.rs
src/: device_impl.rs  hw_def.rs  lib.rs  types.rs
