[package]
name    = "examples"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cfg-if = "1.0.0"
critical-section = "1.1.2"

embassy-executor    = { version = "0.5.0", features = ["task-arena-size-8192"] }
embassy-sync        = "0.6.0"
embassy-time        = { version = "0.3.1", features = ["generic-queue-8"] }

embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"

esp-alloc = { version = "0.4.0", optional = true }
esp-backtrace = { version = "0.13.0", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.19.0", features = [
  "async",
  "embedded-hal",
  "embedded-io",
  "esp32c6",
  "log",
] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32c6"] }
esp-println = { version = "0.10.0", features = [
  "esp32c6",
  "log"
] }
esp-wifi = { version = "0.7.0", features = [
  "async",
  "esp-now",
  "esp32c6",
  "phy-enable-usb",
  "utils",
  "wifi",
] }

hdc302x-async = { path = "../../" }

heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
messages = { path = "../messages" }
postcard = { version = "1.0.8", features = [ "heapless" ] }
serde = { version = "1.0.203", default-features = false }
settings = { path = "../settings" }
smoltcp = { version = "0.11.0", default-features = false, features = [
  "medium-ethernet",
  "proto-dhcpv4",
  "proto-igmp",
  "proto-ipv4",
  "socket-dhcpv4",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell         = { version = "2.1.0", features = ["nightly"] }
fugit = "0.3.7"
embedded-hal-async = "1.0.0"
